@startuml
!define QtWidgets ../../../Qt/Widgets
!define MdtElf ../../../Mdt/ExecutableFile/Elf
!include QtWidgets/QGraphicsItemGroup.puml
!include MdtElf/SectionHeader.puml

class LayoutGraphicsItem {
  +LayoutGraphicsItem()
}

QGraphicsItemGroup <|-- LayoutGraphicsItem


' Sections

class SectionGraphicsItemData {
}

SectionGraphicsItemData ..> Mdt.ExecutableFile.Elf.SectionHeader


class SectionGraphicsItem {
}

LayoutGraphicsItem <|-- SectionGraphicsItem
SectionGraphicsItem --> SectionGraphicsItemData


' Segments

class SegmentGraphicsItemData {
}

SegmentGraphicsItemData ..> Mdt.ExecutableFile.Elf.ProgramHeader


class SegmentGraphicsItem {
}

LayoutGraphicsItem <|-- SegmentGraphicsItem
SegmentGraphicsItem --> SegmentGraphicsItemData

hide methods
hide attributes

@enduml
